--- a/src/index.scss
+++ b/src/index.scss
@@ -18,5 +18,18 @@ code {
 
 .link {
   color: inherit;
+  text-decoration: none;
+}
+.link:hover {
+  text-decoration: underline;
+}
+
+.link-blue {
+  color: #4385ff;
+  text-decoration: none;
+}
+.link-blue:hover {
+  text-decoration: underline;
+  color: #196aff;
 }
 
