Begin intership support

--- a/src/components/pages/students/StudentJob/AddStudentJob.module.scss
+++ b/src/components/pages/students/StudentJob/AddStudentJob.module.scss
@@ -13,3 +13,16 @@
   user-select: none;
   pointer-events: none;
 }
+
+.datepicker_container {
+  display: flex;
+  flex-direction: row;
+  & > * {
+    width: 48%;
+  }
+  justify-content: space-between;
+}
+
+.flex_end {
+  justify-content: flex-end;
+}
