--- a/src/components/pages/TeacherStudents/TeacherStudents.module.scss
+++ b/src/components/pages/TeacherStudents/TeacherStudents.module.scss
@@ -3,7 +3,7 @@
 }
 
 .tableWrapper {
-  max-height: 440px;
+  max-height: 560px;
   overflow: auto;
 }
 
@@ -13,4 +13,50 @@
 
 .no_padding {
   padding: 0 !important;
+}
+
+.selected_info_root {
+  display: flex;
+  justify-items: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+.selected_text {
+  margin-bottom: .7rem;
+  text-align: center;
+}
+
+.table_search {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.table_search_filter {
+  display: grid;
+  grid-template-columns: 1fr min-content;
+  gap: 15px;
+  padding: 0 15px;
+}
+
+.input_field {
+  width: 100%;
+}
+
+.selection_btns {
+  display: grid;
+  grid-template-columns: auto auto;
+  gap: 10px 25px;
+
+  @media screen and (max-width: 700px) {
+    grid-template-columns: auto;
+  }
+}
+
+.send_mail_btn:not(:disabled) {
+  color: #5571ff !important;
+}
+
+.clipboard_cpy_btn:not(:disabled) {
+  color: #37a245 !important;
 }
