--- a/src/index.scss
+++ b/src/index.scss
@@ -16,6 +16,10 @@ code {
   text-align: center;
 }
 
+.button-green {
+  color: rgb(51, 117, 51) !important;
+}
+
 .link {
   color: inherit;
   text-decoration: none;
