Add domain modification, modified UI for formations & companies

--- a/src/components/pages/students/StudentJob/Modals.module.scss
+++ b/src/components/pages/students/StudentJob/Modals.module.scss
@@ -17,3 +17,8 @@
 .enter_button {
   margin-top: .4rem !important;
 }
+
+.city_control_wrapper {
+  width: 100%;
+  margin-bottom: 2rem !important;
+}
