Added map on Home Page

--- a/src/index.scss
+++ b/src/index.scss
@@ -36,7 +36,7 @@ code {
   color: #4385ff;
   text-decoration: none;
 }
-.link-blue:hover {
+.link-blue:hover:not(.no-underline) {
   text-decoration: underline;
   color: #196aff;
 }
