--- a/src/components/pages/Administration/Entreprises/ContactEdit.module.scss
+++ b/src/components/pages/Administration/Entreprises/ContactEdit.module.scss
@@ -4,24 +4,7 @@
 }
 
 .lists_item > *:first-child {
-  border-top: 1px #d2d2d2 solid;
-  border: 1px #d2d2d2 solid;
-}
-
-.icon_merge {
-  margin-left: -8px !important;
-  transform: rotate(180deg);
-}
-
-.content_selection, .merge_buttons {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-.merge_buttons {
-  flex-direction: row;
+  border: 1px solid #d2d2d2;
 }
 
 .content_selection > * {
