--- a/src/components/pages/Administration/Formations/Formations.module.scss
+++ b/src/components/pages/Administration/Formations/Formations.module.scss
@@ -7,12 +7,7 @@
   border-top: 1px #d2d2d2 solid;
 }
 
-.icon_merge {
-  margin-left: -8px !important;
-  transform: rotate(180deg);
-}
-
-.content_selection, .merge_buttons {
+.merge_buttons {
   display: flex;
   flex-direction: column;
   align-items: center;
