--- a/src/components/pages/StudentHome/StudentHome.module.scss
+++ b/src/components/pages/StudentHome/StudentHome.module.scss
@@ -21,4 +21,8 @@
   justify-content: space-between;
 }
 
-
+.warning_long_actual {
+  background-color: #ffc277 !important;
+  padding: 1rem;
+  margin: 1.5rem 0 2rem;
+}
