--- a/src/components/pages/Home/Home.module.scss
+++ b/src/components/pages/Home/Home.module.scss
@@ -5,7 +5,7 @@
   flex-grow: 1;
 }
 .container {
-  margin-top: 1.5rem;
+  margin-top: 1rem;
 }
 .home_title_main {
   text-align: center;
@@ -13,15 +13,27 @@
 .home_title, .home_title_main {
   color: rgb(58, 58, 58);
 }
+.mainlogoblock {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 35px;
+  row-gap: 10px;
+
+  @media screen and (max-width: 500px) {
+    grid-template-columns: 1fr;
+  }
+}
+.mainlogolink1 {
+  @media screen and (min-width: 500px) {
+    text-align: end;
+  }
+}
 .mainlogo {
-  max-width: 50%;
-  max-height: 200px;
-  display: block;
-  margin: auto;
+  max-height: 150px;
 }
 .bioinfologo {
   max-width: 100%;
-  max-height: 150px;
+  max-height: 70px;
   display: block;
   margin: auto;
 
