--- a/src/components/pages/Home/Home.module.scss
+++ b/src/components/pages/Home/Home.module.scss
@@ -3,7 +3,7 @@
 }
 .title {
   flex-grow: 1;
-  font-family: Montserrat !important;
+  font-family: Montserrat, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif !important;
   font-weight: 600 !important;
   font-size: 1.5rem !important;
 }
@@ -32,7 +32,7 @@
 }
 .color_header_texts {
   & > * {
-    font-family: Montserrat !important;
+    font-family: Montserrat, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif !important;
     letter-spacing: -0.2rem !important;
   }
 
