--- a/src/components/pages/Home/Home.module.scss
+++ b/src/components/pages/Home/Home.module.scss
@@ -7,6 +7,10 @@
   font-weight: 600 !important;
   font-size: 1.5rem !important;
 }
+.inline_company {
+  margin-top: 0 !important;
+  margin-bottom: 0 !important;
+}
 .container {
   margin-top: 1rem;
 }
