Choix réception mails autos

--- a/src/components/pages/students/StudentJob/Forms.module.scss
+++ b/src/components/pages/students/StudentJob/Forms.module.scss
@@ -44,3 +44,10 @@
 .grid_two_column.gap {
   row-gap: 1.5rem;
 }
+
+.center {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
